fead: communication module was init, and chat function of module-communication and follow function of module-user was simply completeed